Major bug fix in EntityHistory and started fixing entity editor

--- a/config/locales/devise.bg.yml
+++ b/config/locales/devise.bg.yml
@@ -24,7 +24,7 @@ bg:
       send_instructions: 'Ще получиш емейл с инструкции за потвърждение на твоята регистрация.'
       confirmed: 'Успешно потвърди регистрацията си.'
     registrations:
-      signed_up: 'Регистрацията мина успешно. Ако е актививирано потвърждение по емейл, моля провери пощенската си кутия.'
+      signed_up: 'Регистрацията мина успешно.'
       updated: 'Успешно обнови акаунта си.'
       destroyed: 'Твоят акаунт беше изтрит.'
     unlocks:
